--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "pages": [
-    
+    "pages/Areadyout/Areadyout",
     "pages/in/in",
     "pages/out/out",
     "pages/Umy/Umy",
@@ -8,6 +8,7 @@
     "pages/index/index",
     "pages/dzhuce/dzhuce",
     "pages/uzhuce/uzhuce"
+    
   ],
   "window": {
     "backgroundTextStyle": "dark",
