--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
   "pages": [
-    "pages/Areadyout/Areadyout",
+    
     "pages/in/in",
     "pages/out/out",
     "pages/Umy/Umy",
     "pages/Dmy/Dmy",
     "pages/index/index",
     "pages/dzhuce/dzhuce",
-    "pages/uzhuce/uzhuce"
+    "pages/uzhuce/uzhuce",
+    "pages/Areadyout/Areadyout"
     
   ],
   "window": {
