--- a/app.json
+++ b/app.json
@@ -7,7 +7,9 @@
     "pages/index/index",
     "pages/dzhuce/dzhuce",
     "pages/uzhuce/uzhuce",
-    "pages/Areadyout/Areadyout"
+    "pages/Areadyout/Areadyout",
+    "pages/detail/detail",
+    "pages/Mytest/Mytest"
   ],
   "window": {
     "backgroundTextStyle": "dark",
