--- a/app.json
+++ b/app.json
@@ -13,7 +13,9 @@
     "pages/uzhuce/uzhuce",
     "pages/Areadyout/Areadyout",
     "pages/detail/detail",
-    "pages/Mytest/Mytest"
+    "pages/Mytest/Mytest",
+    "pages/Ucenter/Ucenter",
+    "pages/message/message"
   ],
   "window": {
     "backgroundTextStyle": "dark",
