--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    
     "pages/come/come",
     "pages/welcome/welcome",
     "pages/TakePhotos/TakePhotos",
@@ -16,7 +17,9 @@
     "pages/Mytest/Mytest",
     "pages/Ucenter/Ucenter",
     "pages/message/message",
-    "pages/account/account"
+    "pages/account/account",
+    "pages/ChangeUser/ChangeUser",
+    "pages/Complete/Complete"
   ],
   "window": {
     "backgroundTextStyle": "dark",
