医生登陆界面修改
增加了下拉框组件

--- a/app.json
+++ b/app.json
@@ -19,7 +19,9 @@
     "pages/message/message",
     "pages/account/account",
     "pages/ChangeUser/ChangeUser",
-    "pages/Complete/Complete"
+    "pages/Complete/Complete",
+    "components/select/select"
+    
   ],
   "window": {
     "backgroundTextStyle": "dark",
